syntax = "proto3";
option go_package = "./rpc";
import "google/protobuf/empty.proto";

service Account {
  rpc CreateAccount(CreateAccountRequest) returns (google.protobuf.Empty) {}
  rpc Authenticate(AuthenticateRequest) returns (google.protobuf.Empty) {}
}

message CreateAccountRequest {
  string name = 1;
  string password = 2;
}

message AuthenticateRequest {
  string name = 1;
  string password = 2;
}
